Fixed sort dropdown alignment (#196)

--- a/src/elements/components/model-results.module.scss
+++ b/src/elements/components/model-results.module.scss
@@ -29,6 +29,10 @@
         list-style-type: none;
         overflow: hidden;
         min-width: 100%;
+        right: 0;
+        @media screen and (max-width: 380px) {
+            right: auto;
+        }
     }
 
     .sortIcon {
